Change Mermaid theme to see if it helps.

--- a/content/specification/opcode-0.ipynb
+++ b/content/specification/opcode-0.ipynb
@@ -142,6 +142,7 @@
    "metadata": {},
    "source": [
     "```mermaid\n",
+    "%%{init: {'theme':'forest', 'themeVariables': {'primaryColor':'#fff'}}}%%\n",
     "flowchart TD\n",
     "    A(1) --> B\n",
     "    A(1) --> C\n",
