--- a/_sources/content/specification/opcode-0.ipynb
+++ b/_sources/content/specification/opcode-0.ipynb
@@ -23,6 +23,7 @@
     "```\n",
     "\n",
     "```mermaid\n",
+    "%%{init: {'theme':'forest', 'themeVariables': {'defaultLinkColor':'#F5FFF5'}}}%%\n",
     "flowchart TD\n",
     "    A(1) --> B\n",
     "    A(1) --> C\n",
@@ -55,6 +56,7 @@
     "### `[[41 42] [43 44]]`\n",
     "\n",
     "```mermaid\n",
+    "%%{init: {'theme':'forest', 'themeVariables': {'defaultLinkColor':'#F5FFF5'}}}%%\n",
     "flowchart TD\n",
     "    A(1) --> B\n",
     "    A(1) --> C\n",
@@ -71,6 +73,7 @@
     "### `[1 [2 3]]`\n",
     "\n",
     "```mermaid\n",
+    "%%{init: {'theme':'forest', 'themeVariables': {'defaultLinkColor':'#F5FFF5'}}}%%\n",
     "flowchart TD\n",
     "    A(1) --> B\n",
     "    A(1) --> C\n",
@@ -92,6 +95,7 @@
     "### `[[1 2] 3]`\n",
     "\n",
     "```mermaid\n",
+    "%%{init: {'theme':'forest', 'themeVariables': {'defaultLinkColor':'#F5FFF5'}}}%%\n",
     "flowchart TD\n",
     "    A(1) --> B\n",
     "    A(1) --> C\n",
@@ -142,7 +146,7 @@
    "metadata": {},
    "source": [
     "```mermaid\n",
-    "%%{init: {'theme':'forest', 'themeVariables': {'primaryColor':'#fff'}}}%%\n",
+    "%%{init: {'theme':'forest', 'themeVariables': {'defaultLinkColor':'#F5FFF5'}}}%%\n",
     "flowchart TD\n",
     "    A(1) --> B\n",
     "    A(1) --> C\n",
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "ba3c92cc",
    "metadata": {
     "vscode": {
@@ -193,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "e719947f",
    "metadata": {
     "vscode": {
@@ -329,6 +333,7 @@
    "metadata": {},
    "source": [
     "```mermaid\n",
+    "%%{init: {'theme':'forest', 'themeVariables': {'defaultLinkColor':'#F5FFF5'}}}%%\n",
     "flowchart TD\n",
     "    A(1) --> B{{40}}\n",
     "    A(1) --> C\n",
