--- a/_sources/content/specification/opcode-0.ipynb
+++ b/_sources/content/specification/opcode-0.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Opcode 0: Address\n",
     "\n",
-    "## Binary Trees\n",
+    "## Nouns\n",
     "\n",
     "The fundamental data structure of Nock is the noun, which is either an atom (a non-negative integer) or a cell (an ordered pair of two nouns).  Nouns can be visualized as [binary trees](https://grokipedia.com/page/Binary_tree), in which atoms are leaves and cells are internal nodes.\n",
     "\n",
