--- a/_sources/content/specification/detailed-examples.ipynb
+++ b/_sources/content/specification/detailed-examples.ipynb
@@ -89,6 +89,39 @@
    "source": [
     ":formula [4 0 1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What's Missing?\n",
+    "\n",
+    "Nock is mathematically complete, but it doesn't seem to have many affordances that programmers expect from a language.  Nock leaves some pragmatic elements of programming and the computer environment to its evaluator, or runtime environment.\n",
+    "\n",
+    "- Boolean logic (`AND`, `XOR`, `NOT`, etc.) must be implemented out of Nock primitives rather than being axiomatically supplied as operators.\n",
+    "- Side effects (like printing) will be handled by raising special noun patterns to the Nock evaluator.\n",
+    "- Memory is entirely handled by the Nock evaluator.\n",
+    "- Type systems are not part of Nock itself, but can be layered on top of it.\n",
+    "- Evaluation rules are defined, but their implementation is omitted.  You can use a tree-walking interpreter, a bytecode interpreter, or something even more clever to run Nock in practice.  (In fact, you can treat Nock as a spec and not run it at all, as long as you get the same answer!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* How would you implement the Boolean operators in Nock?  (Properly “loobeans”, since `0` is `TRUE` and `1` is `FALSE` in Nock.)"
+   ]
   }
  ],
  "metadata": {
