--- a/_sources/content/specification/opcode-0.ipynb
+++ b/_sources/content/specification/opcode-0.ipynb
@@ -84,7 +84,11 @@
     "    E{{3}}\n",
     "```\n",
     "\n",
-    "We often omit the right-hand cells since cells tend to branch strongly right in practice.\n",
+    "```nock\n",
+    "[a b c]             [a [b c]]\n",
+    "```\n",
+    "\n",
+    "We often omit the right-hand cells since cells tend to branch strongly right in practice.  (This saves us from Lisp-style end-paren piles.)\n",
     "\n",
     "```nock\n",
     "[a b c]             [a [b c]]\n",
