--- a/_sources/content/specification/opcode-4.ipynb
+++ b/_sources/content/specification/opcode-4.ipynb
@@ -5,8 +5,42 @@
    "id": "b27b9458",
    "metadata": {},
    "source": [
-    "# Opcode 4: Increment"
+    "# Opcode 4: Increment\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "```\n",
+    "+[a b]              +[a b]\n",
+    "+a                  1 + a\n",
+    "```\n",
+    "\n",
+    "We can increment atoms, but not cells (which makes sense).  Every natural number (atom) has a successor, so there is no possible crash here (as long as our interpreter actually supports arbitrarily sized integers).\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350f878a",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1736439a",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
