--- a/_sources/content/specification/detailed-examples.ipynb
+++ b/_sources/content/specification/detailed-examples.ipynb
@@ -501,6 +501,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You can grab the leg without the third opcode 9, but it doesn't evaluate it so you have to grab the tail of the opcode 1 or evaluate it separately as with an opcode 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "vscode": {
+     "languageId": "hoon"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "[8 [1 [8 [1 0] [1 4 0 6] 0 1] [1 42] 1 43] 8 [9 4 0 1] 9 2 10 [6 7 [0 3] 0 21] 0 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### What's Missing?\n",
     "\n",
     "Nock is mathematically complete, but it doesn't seem to have many affordances that programmers expect from a language.  Nock leaves some pragmatic elements of programming and the computer environment to its evaluator, or runtime environment.\n",
